Teacher Index fixed, except DIV system still isn't generating correct box heights on IE.

--- a/webapp/trunk/src/main/webapp/themes/tels/default/styles/globalstyles.css
+++ b/webapp/trunk/src/main/webapp/themes/tels/default/styles/globalstyles.css
@@ -20,7 +20,7 @@
 
 
 body {
-	font-family: "Lucida Grande", "Lucida San Unicode", "Gill Sans", Helvetica, Arial;
+	font-family: "Lucida Grande", "Lucida San Unicode", "Gill Sans", Arial, Helvetica;
 	font-size: 62.7%;
 	text-align: center;
 	margin: 5px;
